bet controller ok
