# backend/sportsbet_server/openapi/sportsbet_server.yaml
@@ -28,37 +28,29 @@ tags:
   description: El Ranking de los usuarios
 paths:
   /bet:
+    get:
+      tags:
+      - bet
+      summary: Find bet by ID
+      description: Returns a single bet
+      operationId: get_bets
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Bet'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Bet'
+      x-openapi-router-controller: sportsbet_server.controllers.bet_controller
     post:
       tags:
       - bet
       summary: Add a new bet
       description: Add a new bet
       operationId: add_bet
-      parameters:
-      - name: api_key
-        in: header
-        description: ""
-        required: false
-        style: simple
-        explode: false
-        schema:
-          type: string
-      - name: userId
-        in: query
-        description: ID of user who made the bet
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: eventIds
-        in: query
-        description: Comma separated list of eventIds that this bet is on
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
       responses:
         "200":
           description: Successful operation
@@ -72,7 +64,27 @@ paths:
         "405":
           description: Invalid input
       x-openapi-router-controller: sportsbet_server.controllers.bet_controller
-  /bet/{betId}:
+  /update_bet:
+    post:
+      tags:
+      - bet
+      summary: Updates  bet
+      description: Updates  bet
+      operationId: update_bet
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Bet'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Bet'
+        "405":
+          description: Invalid input
+      x-openapi-router-controller: sportsbet_server.controllers.bet_controller
+  /bet/{id}:
     get:
       tags:
       - bet
@@ -80,23 +92,14 @@ paths:
       description: Returns a single bet
       operationId: get_bet_by_id
       parameters:
-      - name: api_key
-        in: header
-        description: ""
-        required: false
-        style: simple
-        explode: false
-        schema:
-          type: string
-      - name: betId
+      - name: id
         in: path
         description: ID of bet to return
         required: true
         style: simple
         explode: false
         schema:
-          type: integer
-          format: int64
+          type: string
       responses:
         "200":
           description: successful operation
@@ -134,8 +137,7 @@ paths:
         style: simple
         explode: false
         schema:
-          type: integer
-          format: int64
+          type: string
       responses:
         "400":
           description: Invalid bet value
@@ -266,15 +268,14 @@ paths:
         explode: false
         schema:
           type: string
-      - name: Id
+      - name: id
         in: path
         description: EventPlayer id to delete
         required: true
         style: simple
         explode: false
         schema:
-          type: integer
-          format: int64
+          type: string
       responses:
         "400":
           description: Invalid event_player value
@@ -435,8 +436,7 @@ paths:
         style: simple
         explode: false
         schema:
-          type: integer
-          format: int64
+          type: string
       responses:
         "400":
           description: Invalid event_category value
@@ -819,7 +819,9 @@ components:
         name: user
     Bet:
       required:
-      - bet_amount
+      - goals
+      - result
+      - event_id
       - user_id
       type: object
       properties:
@@ -839,48 +841,23 @@ components:
           type: string
           description: bet status
           enum:
-          - placed
+          - created
           - win
           - lose
       example:
         user_id: e9f01bd4-4010-11ed-b878-0242ac120002
-        bet_amount: 1000
         id: e9f01bd4-4010-11ed-b878-0242ac120002
         bet_datetime: 2022-08-01 23:59
         events:
-        - pte: 1.2
-          gv0: 1.2
-          gv2: 1.2
-          rfv: 1.2
-          gv1: 1.2
-          gv3: 1.2
-          local_player: U. de Chile
+        - local_player: U. de Chile
           visitor_player: U. de Chile
-          ptl: 1.2
-          rlf: 1.2
-          rfe: 1.2
           event_start: 2020-08-01 08:50
           event_end: 2020-08-01 08:50
-          ptv: 1.2
           id: 07cb3c2c-b40c-472f-b05c-7168ac4327e0
           category: Futbol de Chile - Primera Division
-        - pte: 1.2
-          gv0: 1.2
-          gv2: 1.2
-          rfv: 1.2
-          gv1: 1.2
-          gv3: 1.2
-          local_player: U. de Chile
-          visitor_player: U. de Chile
-          ptl: 1.2
-          rlf: 1.2
-          rfe: 1.2
-          event_start: 2020-08-01 08:50
-          event_end: 2020-08-01 08:50
-          ptv: 1.2
-          id: 07cb3c2c-b40c-472f-b05c-7168ac4327e0
-          category: Futbol de Chile - Primera Division
-        status: placed
+          goals: 1
+          result: l
+        status: win
       xml:
         name: bet
   requestBodies:
